Added bat wings